--- a/views/usc.html
+++ b/views/usc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>myself</title>
+	<title>usc</title>
 	<meta charset="utf-8">
 	<link href="http://cdn.staticfile.org/twitter-bootstrap/3.0.1/css/bootstrap.min.css" rel="stylesheet">
 	<!Framework:jquery>
@@ -153,95 +153,80 @@
 		</div>
 	</div>
 </div>
-
-<img style="margin-top: 50px;width:100%" src="../images/bak.png">
-
-<!--Test-->
-<p style="margin-top: 50px;color:#9D9D9D">当前位置：首页 > More > 
-内容</p>
-
-<!--标签-->
-<div class="container" style="margin-top: 100px">
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-		   <img src="../images/span.png">
-		   <h2>
-				职业规划
-			</h2>
-			<p>
-				“个人职业规划”简洁的概括了未来的短期规划(1-2年)。
-				</br>
-				2015‎-07‎-21‎ ‏‎23:29 
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/skill.png">
-		   <h2>
-				技术关注
-			</h2>
-			<p>
-				紧跟科技技术发展，关注行业技术革新，发现新力量。
-				</br>
-				2017-03-28 ‏‎17:33
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/creat.png">
-		   <h2>
-				创客空间
-			</h2>
-			<p>
-				开启创新思维，拥抱开源，实现科技创新。
-				</br>
-				2015-11-05 21:31
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-	</div>
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-		   <img src="../images/find.png">
-		   <h2>
-				追根究底
-			</h2>
-			<p>
-				以探索者的角色，探究技术核心，漫游技术发展历程。
-				</br>
-				2015-12-1 15:00
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/life.png">
-		   <h2>
-				生活向往
-			</h2>
-			<p>
-				热爱生活，健康生活，追求生活个性品质。
-				</br>
-				2017-09-10 19:45
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		</div>
-	</div>
+<!--
+<img style="margin-top: 50px;width:100%" src="../images/usc2.png">
+-->
+<div>
+    <img style="margin-top: 50px;" src="../images/new.PNG">
+	<h3 style="margin-left: 105px"><span class=" 
+glyphicon glyphicon-stop" style="color:#0D0D0D"></span>2016.11 - 2016.02 &nbsp;&nbsp;新版《新闻发布系统》 &nbsp;&nbsp;PHP工程师</h3>
 </div>
 
+<div class="container" style="margin-top: 100px">
+<div class="row clearfix">
+    <div class="col-md-12 column">
+      <div class="tabbable" id="tabs-96386">
+        <ul class="nav nav-tabs">
+          <li  class="active">
+             <a href="#panel1" data-toggle="tab">开发过程</a>
+          </li>
+          <li>
+             <a href="#panel2" data-toggle="tab">成果</a>
+          </li>
+          <li>
+             <a href="#panel3" data-toggle="tab">总结</a>
+          </li>
+        </ul>
+        <div class="tab-content">
+          <div class="tab-pane active" id="panel1">
+            </br>
+            <p>1.开发环境：</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Windows 8.1 x64/Sublime Text3/WAMP/FireBug/Multibrowser。 
+            </p>
+            </br>
+            <p>2.核心技术：</p>
+            <p> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Html5/Css3/JavaScript/JQuery/Bootstrap/PHP/Mysql/Linux。
+            </p>
+            </br>
+            <p>3.项目描述：</p>
+            <p> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.此项目是一个新闻发布系统，能够自由编辑、发布文章，由前端和后端两大部分构成，前端部分主要是网页布局及文章的分布，后端主要是管理用户、管理员及文章，包括：编辑、删除、增加用户及管理员，编辑、删除及发布文章。
+            </p>
+            </br>
+            <p>4.项目职责：</p>
+            <p> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 11.在对旧版系统进行重构时，作为PHP开发工程师，负责重构代码，首次使用MVC框架，优化了旧版的《新闻发布系统》，解决了文件结构不清晰、代码冗余等问题，使其逻辑分明，运行效率大幅提高。
+            </p>
+            </br>
+          </div>
+          <div class="tab-pane" id="panel2">
+            </br>
+            <p>1.网址：</p>
+            </br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+            <a href="#">Addrss：待部署服务器，敬请期待。</a>
+            <img src="../images/usc2.png" style="width: 1140px;height: auto">
+            </br>
+            </br>
+          </div>
+          <div class="tab-pane" id="panel3">
+            <div class="video-background-home">
+                </br>
+                <p>1.文档：</p>
+                <img src="../images/usc-readme.PNG">
+                </br>
+                <p>2.内容：</p>
+                <img src="../images/usc-readme1.png">
+                <img src="../images/usc-readme2.png">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-<!--尾页-->
 <div class="footer" style="background-color: #2B2B2B">
 <div>
   <div class="footer-nav">
