--- a/views/zte.html
+++ b/views/zte.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>myself</title>
+	<title>zte</title>
 	<meta charset="utf-8">
 	<link href="http://cdn.staticfile.org/twitter-bootstrap/3.0.1/css/bootstrap.min.css" rel="stylesheet">
 	<!Framework:jquery>
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
 <style type="text/css">
+
 <!--尾页-->
   .footer{
     width: 100%;
@@ -50,7 +51,7 @@
   }
 </style>
 </head>
-<body>
+<body data-spy="scroll" data-target="#myScrollspy" data-offset="20">
 <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column" style="padding-right: 0px">
@@ -154,93 +155,62 @@
 	</div>
 </div>
 
-<img style="margin-top: 50px;width:100%" src="../images/bak.png">
-
-<!--Test-->
-<p style="margin-top: 50px;color:#9D9D9D">当前位置：首页 > More > 
-内容</p>
-
-<!--标签-->
+<img style="margin-top: 50px;" src="../images/ZTE.PNG">
+<img style="width: 1395px" src="../images/zte-address.PNG">
+<p>（感谢“百度地图”提供现场图片）</p>
+<h3 style="margin-left: 105px"><span class=" 
+glyphicon glyphicon-stop" style="color: #337AB7"></span>2015.04 - 2015.05 &nbsp;&nbsp;衡阳中兴网信科技有限公司 &nbsp;&nbsp;Java见习生 </h3>
 <div class="container" style="margin-top: 100px">
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-		   <img src="../images/span.png">
-		   <h2>
-				职业规划
-			</h2>
-			<p>
-				“个人职业规划”简洁的概括了未来的短期规划(1-2年)。
-				</br>
-				2015‎-07‎-21‎ ‏‎23:29 
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/skill.png">
-		   <h2>
-				技术关注
-			</h2>
-			<p>
-				紧跟科技技术发展，关注行业技术革新，发现新力量。
-				</br>
-				2017-03-28 ‏‎17:33
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/creat.png">
-		   <h2>
-				创客空间
-			</h2>
-			<p>
-				开启创新思维，拥抱开源，实现科技创新。
-				</br>
-				2015-11-05 21:31
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-	</div>
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-		   <img src="../images/find.png">
-		   <h2>
-				追根究底
-			</h2>
-			<p>
-				以探索者的角色，探究技术核心，漫游技术发展历程。
-				</br>
-				2015-12-1 15:00
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/life.png">
-		   <h2>
-				生活向往
-			</h2>
-			<p>
-				热爱生活，健康生活，追求生活个性品质。
-				</br>
-				2017-09-10 19:45
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		</div>
-	</div>
+<div class="row clearfix">
+    <div class="col-md-12 column">
+      <div class="tabbable" id="tabs-96386">
+        <ul class="nav nav-tabs">
+          <li  class="active">
+             <a href="#panel1" data-toggle="tab">*研发部</a>
+          </li>
+          <li>
+             <a href="#panel2" data-toggle="tab">《“中兴杯”App创意作品大赛》</a>
+          </li>
+          <li>
+             <a href="#panel3" data-toggle="tab">“校青葱”</a>
+          </li>
+        </ul>
+        <div class="tab-content">
+          <div class="tab-pane active" id="panel1">
+            <h5>1.项目描述：</h5>
+            <p>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;数字衡阳建设主要包括基础支撑平台（云计算中心和数据交换平台）和4大核心应用（平安城市、智能交通、数字城管、应急指挥），随着业务的逐步发展，后续规划建设市民一卡通、智慧医疗、智慧环保等应用。
+            </p>
+            </br>
+            <h5>2.见习经历：</h5>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在衡阳中兴网信科技有限公司见习期间，有跟随指导员了解了其内部项目——“数字衡阳”，及各个部门的具体职能；同时，项目经理也为我们讲述了“数字衡阳”的部分技术，包括：交通监控等等。</p>
+            </br>
+            <h5>3.总结：</h5>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这次中兴之行，让我了解了一个互联网企业的内部结构，明白了互联网的魅力所在，它可以改变人们的生活，让大家能够生活在一个智慧舒适的城市。</p>
+            <div>
+              <img src="../images/ztedate.png">
+            </div>
+          </div>
+          <div class="tab-pane" id="panel2">
+            <img src="../images/zte-app.png">
+            <div class="video-background-home">
+            <p></p>
+            </div>
+          </div>
+          <div class="tab-pane" id="panel3">
+            <div class="video-background-home">
+                <h5>1.情景：</h5>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在中兴招募“校青葱”的校园运营团队时，每个人都要上台讲述自己的优劣势来争取运营的机会，本着学习的态度，最终还是突破重围，获取了此次共同运营校园App-“校青葱”的机会</p>
+                </br>
+                <h5>2.职责：</h5>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在运营“校青葱”期间，主要是通过线上的论坛来编辑一些文章来推广，并创建对应的百度贴吧来解决用户的使用过程中的各种问题，以及获取用户反馈；线下也组织过相应的活动，如：学生下载app,我们即可送出小礼品。</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
-
 <!--尾页-->
 <div class="footer" style="background-color: #2B2B2B">
 <div>
