--- a/views/acm.html
+++ b/views/acm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>myself</title>
+	<title>acm</title>
 	<meta charset="utf-8">
 	<link href="http://cdn.staticfile.org/twitter-bootstrap/3.0.1/css/bootstrap.min.css" rel="stylesheet">
 	<!Framework:jquery>
@@ -11,6 +11,11 @@
     <link rel="stylesheet" type="text/css" href="../css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+<style type="text/css">
+	.tab-content{
+		font-size: 16px;
+	}
+</style>
 <style type="text/css">
 <!--尾页-->
   .footer{
@@ -50,7 +55,7 @@
   }
 </style>
 </head>
-<body>
+<body data-spy="scroll" data-target="#myScrollspy" data-offset="20">
 <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column" style="padding-right: 0px">
@@ -154,93 +159,77 @@
 	</div>
 </div>
 
-<img style="margin-top: 50px;width:100%" src="../images/bak.png">
 
-<!--Test-->
-<p style="margin-top: 50px;color:#9D9D9D">当前位置：首页 > More > 
-内容</p>
-
-<!--标签-->
-<div class="container" style="margin-top: 100px">
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-		   <img src="../images/span.png">
-		   <h2>
-				职业规划
-			</h2>
-			<p>
-				“个人职业规划”简洁的概括了未来的短期规划(1-2年)。
-				</br>
-				2015‎-07‎-21‎ ‏‎23:29 
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/skill.png">
-		   <h2>
-				技术关注
-			</h2>
-			<p>
-				紧跟科技技术发展，关注行业技术革新，发现新力量。
-				</br>
-				2017-03-28 ‏‎17:33
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/creat.png">
-		   <h2>
-				创客空间
-			</h2>
-			<p>
-				开启创新思维，拥抱开源，实现科技创新。
-				</br>
-				2015-11-05 21:31
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-	</div>
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-		   <img src="../images/find.png">
-		   <h2>
-				追根究底
-			</h2>
-			<p>
-				以探索者的角色，探究技术核心，漫游技术发展历程。
-				</br>
-				2015-12-1 15:00
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/life.png">
-		   <h2>
-				生活向往
-			</h2>
-			<p>
-				热爱生活，健康生活，追求生活个性品质。
-				</br>
-				2017-09-10 19:45
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		</div>
-	</div>
+<div>
+    <img style="margin-top: 50px;" src="../images/usc.PNG">
+	<h3 style="margin-left: 105px"><span class=" 
+glyphicon glyphicon-stop" style="color: #06408A"></span>2015.04 - 至今 &nbsp;&nbsp;南华大学计算机科学与技术学院软件协会 &nbsp;&nbsp;技术部成员 </h3>
 </div>
 
-
+<div class="container" style="margin-top: 100px">
+<div class="row clearfix">
+    <div class="col-md-12 column">
+      <div class="tabbable" id="tabs-96386">
+        <ul class="nav nav-tabs">
+          <li  class="active">
+             <a href="#panel1" data-toggle="tab">《衡阳师范大学ACM邀请赛》</a>
+          </li>
+          <li>
+             <a href="#panel2" data-toggle="tab">成果</a>
+          </li>
+          <li>
+             <a href="#panel3" data-toggle="tab">总结</a>
+          </li>
+        </ul>
+        <div class="tab-content">
+          <div class="tab-pane active" id="panel1">
+            <p>1.大赛详情：</p>
+            </br>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2015年的《衡阳师范大学ACM邀请赛》是衡阳师范大学以交流学习，切磋编程技术为根本的一次两校公平友谊赛，促进了两校的ACM老师及队员的交流互助，彰显了两校的魅力。</p>
+            <p>
+            </br>
+            <p>2.附：</p>
+              <img src="../images/acm.png">
+            </p>
+            </br>
+          </div>
+          <div class="tab-pane" id="panel2">
+            <img src="../images/number.gif">
+            <div style="float: right;margin-top: 150px">
+            <p>
+            </br>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.在校期间，参与ACM程序设计，受邀参加《衡阳师范大学ACM邀请赛》，排名前<span style="color: green;font-size: 18px"">35%</span>。
+            </p>
+            </div>
+            </br>
+          </div>
+          <div class="tab-pane" id="panel3">
+            <div class="video-background-home">
+                <p>1.文档：</p>
+                <img src="../images/acm-text.PNG">
+                </br>
+                <p>2.内容：</p>
+                <p>Hengyang Normal University@ACM校赛邀请总结报告</p>
+                <p>序言：
+                </br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本次校赛内容7题，含一道英文题，使用visual c++ 6.0或visual studio 2010编译器进行编译。
+                </br>
+                1.知识角度：
+                </br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;自身缺少一种认识一个整体的ACM框架的认知，没有真正的了解过它的所有的知识内容和要求，只是从一面的路径去摸索它，没有针对性的题型及算法的练习和巩固。
+                </br>
+                2.判题系统：</br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;对于在线编程的正确率的判断，需要依据相应的格式的输入，再通过某些算法逻辑实现对应结果的输出。
+                 </br>
+                3.结语：</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;当你不知道的时候，正是你要获取的时候；当你觉得来不及的时候，正是你要开始的时候；当你一无所成的时候，正是你要取得成功的第一步。
+                </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <!--尾页-->
 <div class="footer" style="background-color: #2B2B2B">
 <div>
