--- a/views/boom.html
+++ b/views/boom.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>myself</title>
+	<title>boom</title>
 	<meta charset="utf-8">
 	<link href="http://cdn.staticfile.org/twitter-bootstrap/3.0.1/css/bootstrap.min.css" rel="stylesheet">
 	<!Framework:jquery>
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
 <style type="text/css">
+
 <!--尾页-->
   .footer{
     width: 100%;
@@ -50,7 +51,7 @@
   }
 </style>
 </head>
-<body>
+<body data-spy="scroll" data-target="#myScrollspy" data-offset="20">
 <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column" style="padding-right: 0px">
@@ -154,93 +155,66 @@
 	</div>
 </div>
 
-<img style="margin-top: 50px;width:100%" src="../images/bak.png">
 
-<!--Test-->
-<p style="margin-top: 50px;color:#9D9D9D">当前位置：首页 > More > 
-内容</p>
-
-<!--标签-->
-<div class="container" style="margin-top: 100px">
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-		   <img src="../images/span.png">
-		   <h2>
-				职业规划
-			</h2>
-			<p>
-				“个人职业规划”简洁的概括了未来的短期规划(1-2年)。
-				</br>
-				2015‎-07‎-21‎ ‏‎23:29 
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/skill.png">
-		   <h2>
-				技术关注
-			</h2>
-			<p>
-				紧跟科技技术发展，关注行业技术革新，发现新力量。
-				</br>
-				2017-03-28 ‏‎17:33
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/creat.png">
-		   <h2>
-				创客空间
-			</h2>
-			<p>
-				开启创新思维，拥抱开源，实现科技创新。
-				</br>
-				2015-11-05 21:31
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-	</div>
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-		   <img src="../images/find.png">
-		   <h2>
-				追根究底
-			</h2>
-			<p>
-				以探索者的角色，探究技术核心，漫游技术发展历程。
-				</br>
-				2015-12-1 15:00
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/life.png">
-		   <h2>
-				生活向往
-			</h2>
-			<p>
-				热爱生活，健康生活，追求生活个性品质。
-				</br>
-				2017-09-10 19:45
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		</div>
-	</div>
+<div>
+    <img style="margin-top: 50px;" src="../images/boom.PNG">
+	<h3 style="margin-left: 105px"><span class=" 
+glyphicon glyphicon-stop" style="color: #553C0F"></span>2015.06 - 2016.10 &nbsp;&nbsp;  Boom团队 &nbsp;&nbsp;策划组组长</h3>
 </div>
 
-
+<div class="container" style="margin-top: 100px">
+<div class="row clearfix">
+    <div class="col-md-12 column">
+      <div class="tabbable" id="tabs-96386">
+        <ul class="nav nav-tabs">
+          <li  class="active">
+             <a href="#panel1" data-toggle="tab">《“乐易考杯”湖南省“互联网+”大学生就业创业大赛》</a>
+          </li>
+          <li>
+             <a href="#panel2" data-toggle="tab">参赛作品</a>
+          </li>
+          <li>
+             <a href="#panel3" data-toggle="tab">PPT</a>
+          </li>
+        </ul>
+        <div class="tab-content">
+          <div class="tab-pane active" id="panel1">
+            <h5>1.大赛详情：</h5>
+            </br>
+            <a href="http://www.hunbys.com/show/9,823.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;参考：http://www.hunbys.com/show/9,823.html（湖南省毕业生就业网）</a>
+            <p>
+            </br>
+              <img src="../images/boom-text.png">
+            </p>
+            </br>
+          </div>
+          <div class="tab-pane" id="panel2">
+            <h5>1.文档名称：</h5>
+            <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;《创新创业计划书》—“智能便携式电动滑板”
+            </p>
+            </br>
+            <h5>2.文档内容：</h5>
+            <a href="http://blog.csdn.net/wmc_bk/article/details/49668281"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;参考：http://blog.csdn.net/wmc_bk/article/details/49668281（探索者_wmc）</a>
+            <p>
+            </br>
+              <img src="../images/blog.PNG">
+            </p>
+            </br>
+          </div>
+          <div class="tab-pane" id="panel3">
+            <div class="video-background-home">
+                <h5>1.PPT内容：</h5>
+                </br>
+                <a href="http://blog.csdn.net/wmc_bk/article/details/49668281"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;参考：http://blog.csdn.net/wmc_bk/article/details/49668497（探索者_wmc）</a>
+                </br>
+                <img src="../images/blog2.png">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <!--尾页-->
 <div class="footer" style="background-color: #2B2B2B">
 <div>
