--- a/views/csxy.html
+++ b/views/csxy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>myself</title>
+	<title>csxy</title>
 	<meta charset="utf-8">
 	<link href="http://cdn.staticfile.org/twitter-bootstrap/3.0.1/css/bootstrap.min.css" rel="stylesheet">
 	<!Framework:jquery>
@@ -153,95 +153,81 @@
 		</div>
 	</div>
 </div>
-
-<img style="margin-top: 50px;width:100%" src="../images/bak.png">
-
-<!--Test-->
-<p style="margin-top: 50px;color:#9D9D9D">当前位置：首页 > More > 
-内容</p>
-
-<!--标签-->
-<div class="container" style="margin-top: 100px">
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-		   <img src="../images/span.png">
-		   <h2>
-				职业规划
-			</h2>
-			<p>
-				“个人职业规划”简洁的概括了未来的短期规划(1-2年)。
-				</br>
-				2015‎-07‎-21‎ ‏‎23:29 
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/skill.png">
-		   <h2>
-				技术关注
-			</h2>
-			<p>
-				紧跟科技技术发展，关注行业技术革新，发现新力量。
-				</br>
-				2017-03-28 ‏‎17:33
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/creat.png">
-		   <h2>
-				创客空间
-			</h2>
-			<p>
-				开启创新思维，拥抱开源，实现科技创新。
-				</br>
-				2015-11-05 21:31
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-	</div>
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-		   <img src="../images/find.png">
-		   <h2>
-				追根究底
-			</h2>
-			<p>
-				以探索者的角色，探究技术核心，漫游技术发展历程。
-				</br>
-				2015-12-1 15:00
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/life.png">
-		   <h2>
-				生活向往
-			</h2>
-			<p>
-				热爱生活，健康生活，追求生活个性品质。
-				</br>
-				2017-09-10 19:45
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		</div>
-	</div>
+<!--
+<img style="margin-top: 50px;width:100%" src="../images/csxy2.png">
+-->
+<div>
+    <img style="margin-top: 50px;width: 145px;height: 100px" src="../images/csxy3.png">
+	<h3 style="margin-left: 105px"><span class=" 
+glyphicon glyphicon-stop" style="color: #337AB7"></span>2017.07 - 2017.08 &nbsp;&nbsp;《考生录取专业确认系统》 &nbsp;&nbsp;Java工程师</h3>
 </div>
 
+<div class="container" style="margin-top: 100px">
+<div class="row clearfix">
+    <div class="col-md-12 column">
+      <div class="tabbable" id="tabs-96386">
+        <ul class="nav nav-tabs">
+          <li  class="active">
+             <a href="#panel1" data-toggle="tab">开发过程</a>
+          </li>
+          <li>
+             <a href="#panel2" data-toggle="tab">成果</a>
+          </li>
+          <li>
+             <a href="#panel3" data-toggle="tab">总结</a>
+          </li>
+        </ul>
+        <div class="tab-content">
+          <div class="tab-pane active" id="panel1">
+            </br>
+            <p>1.开发环境：</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Windows 8.1 x64/MyEclipse 10/Tomcat 7/JDK 7/FireBug/Navicat。 
+            </p>
+            </br>
+            <p>2.核心技术：</p>
+            <p> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Html5/Css3/JavaScript/JQuery/EasyUI/Bootstrap/JavaWeb/Spring/SpringMVC/Mybatis/Mysql。
+            </p>
+            </br>
+            <p>3.项目描述：</p>
+            <p> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.此网站的实现，可以使湖南考生实现网上更换和确认专业信息，同时方便老师在线管理；由于部分考生虽然投档至我校，但其可能出于各种原因（如：错投、调剂不满意、家庭变故等等），考生不能到校就读，以往的方式是分工分批拨打考生电话，来确认考生是否就读我校，而此系统则是优化招生方式，减少人力资源的投入，以考生的网站操作为依据，来确认考生的就读意愿。
+            </p>
+            </br>
+            <p>4.项目职责：</p>
+            <p> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 1.在招生就业处提供的需求下，作为Java开发工程师，主要负责实现短信功能、快递单号的编辑及反馈功能；整个项目基于SSM框架，业务逻辑层基于面向接口式编程，Junit4测试；实现了系统可依据考生操作（如：“确认就读”）自动发送对应短信至考生，考生可实时查看录取通知书的快递信息；成功部署于2017年8月份的招生计划中，简化了往年传统的招生模式。
+            </p>
+            </br>
+          </div>
+          <div class="tab-pane" id="panel2">
+            </br>
+            <p>1.网址：</p>
+            </br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+            <a href="#">Addrss：待部署服务器，敬请期待。</a>
+            <img src="../images/csxy2.png" style="width: 1140px;height: auto">
+            </br>
+            </br>
+          </div>
+          <div class="tab-pane" id="panel3">
+            <div class="video-background-home">
+                </br>
+                <p>1.文档：</p>
+                <img src="../images/csxy-readme.PNG">
+                </br>
+                <p>2.内容：</p>
+                <p>*特别声明：</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  由于此项目涉及学院内部研发机密，在此，不予公示具体业务内容，敬请谅解。</p>
+                <img src="../images/csxy-readme1.PNG">
+                <img src="../images/csxy-readme2.PNG">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-<!--尾页-->
 <div class="footer" style="background-color: #2B2B2B">
 <div>
   <div class="footer-nav">
