--- a/views/iuesc.html
+++ b/views/iuesc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>myself</title>
+	<title>iuesc</title>
 	<meta charset="utf-8">
 	<link href="http://cdn.staticfile.org/twitter-bootstrap/3.0.1/css/bootstrap.min.css" rel="stylesheet">
 	<!Framework:jquery>
@@ -153,95 +153,81 @@
 		</div>
 	</div>
 </div>
-
-<img style="margin-top: 50px;width:100%" src="../images/bak.png">
-
-<!--Test-->
-<p style="margin-top: 50px;color:#9D9D9D">当前位置：首页 > More > 
-内容</p>
-
-<!--标签-->
-<div class="container" style="margin-top: 100px">
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-		   <img src="../images/span.png">
-		   <h2>
-				职业规划
-			</h2>
-			<p>
-				“个人职业规划”简洁的概括了未来的短期规划(1-2年)。
-				</br>
-				2015‎-07‎-21‎ ‏‎23:29 
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/skill.png">
-		   <h2>
-				技术关注
-			</h2>
-			<p>
-				紧跟科技技术发展，关注行业技术革新，发现新力量。
-				</br>
-				2017-03-28 ‏‎17:33
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/creat.png">
-		   <h2>
-				创客空间
-			</h2>
-			<p>
-				开启创新思维，拥抱开源，实现科技创新。
-				</br>
-				2015-11-05 21:31
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-	</div>
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-		   <img src="../images/find.png">
-		   <h2>
-				追根究底
-			</h2>
-			<p>
-				以探索者的角色，探究技术核心，漫游技术发展历程。
-				</br>
-				2015-12-1 15:00
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/life.png">
-		   <h2>
-				生活向往
-			</h2>
-			<p>
-				热爱生活，健康生活，追求生活个性品质。
-				</br>
-				2017-09-10 19:45
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		</div>
-	</div>
+<!--
+<img style="margin-top: 50px;width:100%" src="../images/iuesc2.png">
+-->
+<div>
+    <img style="margin-top: 50px;" src="../images/iuesc.PNG">
+	<h3 style="margin-left: 105px"><span class=" 
+glyphicon glyphicon-stop" style="color: #8A8A8A"></span>2016.11 - 2016.12 &nbsp;&nbsp;《iUESC》— Ultimate  Education of south china &nbsp;&nbsp;前端工程师</h3>
 </div>
 
+<div class="container" style="margin-top: 100px">
+<div class="row clearfix">
+    <div class="col-md-12 column">
+      <div class="tabbable" id="tabs-96386">
+        <ul class="nav nav-tabs">
+          <li  class="active">
+             <a href="#panel1" data-toggle="tab">开发过程</a>
+          </li>
+          <li>
+             <a href="#panel2" data-toggle="tab">成果</a>
+          </li>
+          <li>
+             <a href="#panel3" data-toggle="tab">总结</a>
+          </li>
+        </ul>
+        <div class="tab-content">
+          <div class="tab-pane active" id="panel1">
+            </br>
+            <p>1.开发环境：</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Windows 8.1 x64/Sublime Text3/FireBug/Multibrowser/MyEclipse 10/Tomcat 7/JDK 7。 
+            </p>
+            </br>
+            <p>2.核心技术：</p>
+            <p> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Html5/Css3/JavaScript/JQuery/Bootstrap/JSP/Mysql。
+            </p>
+            </br>
+            <p>3.项目描述：</p>
+            <p> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.《iUESC》— Ultimate  Education of south china是一个在线教学网站，以计算机科学与技术为主，包括：原创作品的发布、报酬比例的增长、直播教学、科技资讯及前辈在线指导。
+            </p>
+            </br>
+            <p>4.项目职责：</p>
+            <p> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 1.在团队协作中，作为Web前端开发工程师，主要负责《iUESC》— Ultimate  Education of south china网页的编码部分，并结合bootstrap，实现了响应式布局；使用html5的video标签替代flash；JavaScript实现侧栏动态效果，使用HTML5+CSS3优化了部分JavaScript代码，实现了不同功能同样的动态效果。
+            </p>
+            </br>
+          </div>
+          <div class="tab-pane" id="panel2">
+            </br>
+            <p>1.网址：</p>
+            </br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+            <a href="#">Addrss：待部署服务器，敬请期待。</a>
+            <img src="../images/iuesc2.png" style="width: 1140px;height: auto">
+            </br>
+            </br>
+          </div>
+          <div class="tab-pane" id="panel3">
+            <div class="video-background-home">
+                </br>
+                <p>1.文档：</p>
+                <img src="../images/iuesc-readme.PNG">
+                </br>
+                <p>2.内容：</p>
+                <img src="../images/iuesc-readme1.PNG">
+                <img src="../images/iuesc-readme2.PNG">
+                <img src="../images/iuesc-readme3.PNG">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-<!--尾页-->
 <div class="footer" style="background-color: #2B2B2B">
 <div>
   <div class="footer-nav">
