--- a/views/sig.html
+++ b/views/sig.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>myself</title>
+	<title>sig</title>
 	<meta charset="utf-8">
 	<link href="http://cdn.staticfile.org/twitter-bootstrap/3.0.1/css/bootstrap.min.css" rel="stylesheet">
 	<!Framework:jquery>
@@ -11,6 +11,11 @@
     <link rel="stylesheet" type="text/css" href="../css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+<style type="text/css">
+  .tab-content{
+    font-size: 16px;
+  }
+</style>
 <style type="text/css">
 <!--尾页-->
   .footer{
@@ -50,7 +55,7 @@
   }
 </style>
 </head>
-<body>
+<body data-spy="scroll" data-target="#myScrollspy" data-offset="20">
 <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column" style="padding-right: 0px">
@@ -107,7 +112,7 @@
 								<li class="divider">
 								</li>
 								<li>
-									 <a href="../index.html">4.2017.07 - 2017.08	《考生录取专业管理系统》	Java工程师</a>
+									 <a href="../index.html">4.2017.06 - 2017.09	《考生录取专业管理系统》	Java工程师</a>
 								</li>
 								
 							</ul>
@@ -154,93 +159,62 @@
 	</div>
 </div>
 
-<img style="margin-top: 50px;width:100%" src="../images/bak.png">
 
-<!--Test-->
-<p style="margin-top: 50px;color:#9D9D9D">当前位置：首页 > More > 
-内容</p>
-
-<!--标签-->
-<div class="container" style="margin-top: 100px">
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-		   <img src="../images/span.png">
-		   <h2>
-				职业规划
-			</h2>
-			<p>
-				“个人职业规划”简洁的概括了未来的短期规划(1-2年)。
-				</br>
-				2015‎-07‎-21‎ ‏‎23:29 
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/skill.png">
-		   <h2>
-				技术关注
-			</h2>
-			<p>
-				紧跟科技技术发展，关注行业技术革新，发现新力量。
-				</br>
-				2017-03-28 ‏‎17:33
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/creat.png">
-		   <h2>
-				创客空间
-			</h2>
-			<p>
-				开启创新思维，拥抱开源，实现科技创新。
-				</br>
-				2015-11-05 21:31
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-	</div>
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-		   <img src="../images/find.png">
-		   <h2>
-				追根究底
-			</h2>
-			<p>
-				以探索者的角色，探究技术核心，漫游技术发展历程。
-				</br>
-				2015-12-1 15:00
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/life.png">
-		   <h2>
-				生活向往
-			</h2>
-			<p>
-				热爱生活，健康生活，追求生活个性品质。
-				</br>
-				2017-09-10 19:45
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		</div>
-	</div>
+<div>
+    <img style="margin-top: 50px;" src="../images/ui.PNG">
+	<h3 style="margin-left: 105px"><span class=" 
+glyphicon glyphicon-stop" style="color: #7AB73F"></span>2017.03 - 2017.06 &nbsp;&nbsp;《2017第十届中国大学生计算机设计大赛》&nbsp;&nbsp;设计组成员
+</h3>
 </div>
 
-
+<div class="container" style="margin-top: 100px">
+<div class="row clearfix">
+    <div class="col-md-12 column">
+      <div class="tabbable" id="tabs-96386">
+        <ul class="nav nav-tabs">
+          <li  class="active">
+             <a href="#panel1" data-toggle="tab">《2017第十届中国大学生计算机设计大赛-中南地区赛》 </a>
+          </li>
+          <li>
+             <a href="#panel2" data-toggle="tab">成果</a>
+          </li>
+          <li>
+             <a href="#panel3" data-toggle="tab">总结</a>
+          </li>
+        </ul>
+        <div class="tab-content">
+          <div class="tab-pane active" id="panel1">
+            <h5>1.大赛详情：</h5>
+            </br>
+            <p>
+            </br>
+              <img src="../images/sig.gif">
+            </p>
+            </br>
+          </div>
+          <div class="tab-pane" id="panel2">
+            <img src="../images/number.gif">
+            <div style="float: right;margin-top: 150px">
+            <p>
+            </br>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.凝聚团队的集体智慧与灵感，作品：《末日:倒计时》，在中南区域赛中获得<span style="color: green;font-size: 18px">一等奖</span>。 
+            </p>
+            </div>
+            </br>
+          </div>
+          <div class="tab-pane" id="panel3">
+            <div class="video-background-home">
+                <h5>1.总结：</h5>
+                </br>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在临近比赛的准备阶段，大家一起绞尽脑汁的提供富有创意的设计框架，希望通过灵感创意构建基本架构，在填充内容的方式来完成此次作品，整个过程中大家都是洋溢着激情，挥洒着汗水，而最后取得的成绩也是对我们付出最好的回报。</p>
+                </br>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <!--尾页-->
 <div class="footer" style="background-color: #2B2B2B">
 <div>
