--- a/views/small.html
+++ b/views/small.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>myself</title>
+	<title>small</title>
 	<meta charset="utf-8">
 	<link href="http://cdn.staticfile.org/twitter-bootstrap/3.0.1/css/bootstrap.min.css" rel="stylesheet">
 	<!Framework:jquery>
@@ -153,95 +153,80 @@
 		</div>
 	</div>
 </div>
-
-<img style="margin-top: 50px;width:100%" src="../images/bak.png">
-
-<!--Test-->
-<p style="margin-top: 50px;color:#9D9D9D">当前位置：首页 > More > 
-内容</p>
-
-<!--标签-->
-<div class="container" style="margin-top: 100px">
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-		   <img src="../images/span.png">
-		   <h2>
-				职业规划
-			</h2>
-			<p>
-				“个人职业规划”简洁的概括了未来的短期规划(1-2年)。
-				</br>
-				2015‎-07‎-21‎ ‏‎23:29 
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/skill.png">
-		   <h2>
-				技术关注
-			</h2>
-			<p>
-				紧跟科技技术发展，关注行业技术革新，发现新力量。
-				</br>
-				2017-03-28 ‏‎17:33
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/creat.png">
-		   <h2>
-				创客空间
-			</h2>
-			<p>
-				开启创新思维，拥抱开源，实现科技创新。
-				</br>
-				2015-11-05 21:31
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-	</div>
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-		   <img src="../images/find.png">
-		   <h2>
-				追根究底
-			</h2>
-			<p>
-				以探索者的角色，探究技术核心，漫游技术发展历程。
-				</br>
-				2015-12-1 15:00
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		   <img src="../images/life.png">
-		   <h2>
-				生活向往
-			</h2>
-			<p>
-				热爱生活，健康生活，追求生活个性品质。
-				</br>
-				2017-09-10 19:45
-			</p>
-			<p>
-				 <a class="btn" href="#">More »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-		</div>
-	</div>
+<!--
+<img style="margin-top: 50px;width:100%" src="../images/small.png">
+-->
+<div>
+    <img style="margin-top: 50px;" src="../images/search.PNG">
+	<h3 style="margin-left: 105px"><span class=" 
+glyphicon glyphicon-stop" style="color: #83AA41"></span>2016.12 - 2017.01 &nbsp;&nbsp;《个人受骗几率检测小程序》&nbsp;&nbsp;Java工程师</h3>
 </div>
 
+<div class="container" style="margin-top: 100px">
+<div class="row clearfix">
+    <div class="col-md-12 column">
+      <div class="tabbable" id="tabs-96386">
+        <ul class="nav nav-tabs">
+          <li  class="active">
+             <a href="#panel1" data-toggle="tab">开发过程</a>
+          </li>
+          <li>
+             <a href="#panel2" data-toggle="tab">成果</a>
+          </li>
+          <li>
+             <a href="#panel3" data-toggle="tab">总结</a>
+          </li>
+        </ul>
+        <div class="tab-content">
+          <div class="tab-pane active" id="panel1">
+            </br>
+            <p>1.开发环境：</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Windows 8.1 x64/MyEclipse 10/Tomcat 7/JDK 7/FireBug/Navicat。 
+            </p>
+            </br>
+            <p>2.核心技术：</p>
+            <p> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Html5/Css3/JavaScript/JQuery/Bootstrap/JavaWeb/Mysql/Java Excel Api。
+            </p>
+            </br>
+            <p>3.项目描述：</p>
+            <p> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.在参加《第七届南华大学“挑战杯”大学生课外学术科技作品竞赛》的过程中，我们研究的课题是“大学生对诈骗的判断意识和受骗几率的调查与对策分析”，基于大量的问卷调查，因此，“个人受骗几率检测小程序”则是在以上背景下开发的，此小程序需要被测者填写一份简短的调查内容，然后程序已经被测者的“数据”与问卷调查数据库中的“数据”对比，继而计算出此位被测者的受骗概率。
+            </p>
+            </br>
+            <p>4.项目职责：</p>
+            <p> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 1.在收集大量调查问卷后，主要负责java开发，以JavaWeb形式开发，使用Java Excel Api采集“个人受骗几率表”数据进行逻辑处理，“个人信息”与“个人受骗几率表”比对，能够准确获得个人受骗概率。 
+            </p>
+            </br>
+          </div>
+          <div class="tab-pane" id="panel2">
+            </br>
+            <p>1.网址：</p>
+            </br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+            <a href="#">Addrss：待部署服务器，敬请期待。</a>
+            <img src="../images/small.png" style="width: 1140px;height: auto">
+            </br>
+            </br>
+          </div>
+          <div class="tab-pane" id="panel3">
+            <div class="video-background-home">
+                </br>
+                <p>1.文档：</p>
+                <img src="../images/search-readme.PNG">
+                </br>
+                <p>2.内容：</p>
+                </p>
+                <img src="../images/search-readme1.PNG">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-<!--尾页-->
 <div class="footer" style="background-color: #2B2B2B">
 <div>
   <div class="footer-nav">
