Update the csxy.html for images

--- a/views/csxy.html
+++ b/views/csxy.html
@@ -218,8 +218,8 @@ glyphicon glyphicon-stop" style="color: #337AB7"></span>2017.07 - 2017.08 &nbsp;
                 </br>
                 <p>2.内容：</p>
                 <p>*特别声明：</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  由于此项目涉及学院内部研发机密，在此，不予公示具体业务内容，敬请谅解。</p>
-                <img src="../images/csxy-readme1.PNG">
-                <img src="../images/csxy-readme2.PNG">
+                <img src="../images/csxy-readme1.png">
+                <img src="../images/csxy-readme2.png">
             </div>
           </div>
         </div>
