Add the image's url.

--- a/views/csxy.html
+++ b/views/csxy.html
@@ -206,7 +206,7 @@ glyphicon glyphicon-stop" style="color: #337AB7"></span>2017.07 - 2017.08 &nbsp;
             </br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
             <a href="#">Addrss：待部署服务器，敬请期待。</a>
-            <img src="../images/csxy2.png" style="width: 1140px;height: auto">
+            <img src="../images/csxy-text.PNG" style="width: 1140px;height: auto">
             </br>
             </br>
           </div>
