--- a/views/iuesc.html
+++ b/views/iuesc.html
@@ -206,7 +206,7 @@ glyphicon glyphicon-stop" style="color: #8A8A8A"></span>2016.11 - 2016.12 &nbsp;
             </br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
             <a href="#">Addrss：待部署服务器，敬请期待。</a>
-            <img src="../images/iuesc2.png" style="width: 1140px;height: auto">
+            <img src="../images/iuesc-text.PNG" style="width: 1140px;height: auto">
             </br>
             </br>
           </div>
