--- a/views/usc.html
+++ b/views/usc.html
@@ -206,7 +206,7 @@ glyphicon glyphicon-stop" style="color:#0D0D0D"></span>2016.11 - 2016.02 &nbsp;&
             </br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
             <a href="#">Addrss：待部署服务器，敬请期待。</a>
-            <img src="../images/usc2.png" style="width: 1140px;height: auto">
+            <img src="../images/usc-text.PNG" style="width: 1140px;height: auto">
             </br>
             </br>
           </div>
