--- a/views/iuesc.html
+++ b/views/iuesc.html
@@ -217,9 +217,9 @@ glyphicon glyphicon-stop" style="color: #8A8A8A"></span>2016.11 - 2016.12 &nbsp;
                 <img src="../images/iuesc-readme.PNG">
                 </br>
                 <p>2.内容：</p>
-                <img src="../images/iuesc-readme1.PNG">
-                <img src="../images/iuesc-readme2.PNG">
-                <img src="../images/iuesc-readme3.PNG">
+                <img src="../images/iuesc-readme1.png">
+                <img src="../images/iuesc-readme2.png">
+                <img src="../images/iuesc-readme3.png">
             </div>
           </div>
         </div>
